compiler/testData/diagnostics/tests/multiplatform/checkNoActualForExpectInLastModule.fir.kt
// ISSUE: KT-58483
// MODULE: jvm
// FILE: jvm.kt
expect <!NO_ACTUAL_FOR_EXPECT!>class A<!>
